--- a/pinyougou/project.config.json
+++ b/pinyougou/project.config.json
@@ -41,7 +41,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.15.0",
-  "appid": "wxf0d923ce3edc32b1",
+  "appid": "wxb4375f8d2606d307",
   "projectname": "pinyougou",
   "debugOptions": {
     "hidedInDevtools": []
